@startuml AuctionManager

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 30

title Diagram Kelas AuctionManager

enum AuctionAction {
    BID
    PASS
}

class AuctionManager {
    - game : Game*
    - logger : TransactionLogger*
    - gui : IGUI*
    __
    + AuctionManager(game : Game*, logger : TransactionLogger*, gui : IGUI*)
    + runAuction(property : Property*, triggeringPlayer : Player*) : Player*
    __
    - buildAuctionOrder(triggeringPlayer : Player*) : vector<Player*>
    - collectBidOrPass(player : Player&, currentHighBid : int) : pair<AuctionAction, int>
    - validateBid(player : const Player&, amount : int, currentHighBid : int) : bool
    - finalizeAuction(winner : Player*, property : Property*, bidAmount : int) : void
}

' Kelas yang direferensi
class Game <<Engine>> {
    + getActivePlayers() : vector<Player*>
    + getCurrentPlayer() : Player*
}

class TransactionLogger <<Data>> {
    + log(turn, username, actionType, detail) : void
}

interface IGUI <<interface>> {
    + getBidInput(player, currentHighBid) : pair<AuctionAction, int>
    + renderAuctionStatus(property, highBid, bidder) : void
    + renderMessage(msg) : void
}

' Model yang dimanipulasi
class Property <<Model>> {
    + setOwner(owner : Player*) : void
    + setStatus(status : PropertyStatus) : void
    + getName() : string
    + getCode() : string
}

class Player <<Model>> {
    + deductMoney(amount : int) : bool
    + canAfford(amount : int) : bool
    + addProperty(property : Property*) : void
    + getUsername() : string
    + getBalance() : int
}

' Relasi
AuctionManager --> Game : references >
AuctionManager --> TransactionLogger : references >
AuctionManager --> IGUI : references >
AuctionManager ..> AuctionAction : uses >
AuctionManager ..> Property : manipulates >
AuctionManager ..> Player : manipulates >

note bottom of AuctionManager
    <b>Alur Lelang (runAuction):</b>
    1. buildAuctionOrder() → urutan dari pemain
       setelah triggeringPlayer
    2. Loop: setiap pemain BID atau PASS
       · BID harus > bid sebelumnya
       · BID tidak boleh > uang pemain
    3. Selesai jika (jumlahPemain-1) PASS berturut-turut
    4. Minimal 1 pemain harus BID
    5. finalizeAuction() → transfer uang & properti

    <b>Dipicu oleh:</b>
    · Pemain tolak beli Street → GameEngine
    · Pemain bangkrut ke Bank → BankruptcyManager

    <b>Giliran lelang BUKAN giliran permainan biasa</b>
    Tidak mempengaruhi durasi efek atau counter turn.
end note

@enduml
